<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/semi_black"
    android:orientation="vertical"
    android:padding="@dimen/screen_margin"
    tools:context="com.example.feature_note.presentation.note_add_edit.NoteAddFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btnGoBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/background_rounded_gray_secondary"
            android:contentDescription="@string/go_back"
            android:padding="@dimen/icon_padding"
            android:src="@drawable/ic_baseline_arrow_back" />

        <ImageView
            android:id="@+id/btnSaveNote"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:background="@drawable/background_rounded_gray_secondary"
            android:contentDescription="@string/add_note"
            android:padding="@dimen/icon_padding"
            android:src="@drawable/ic_baseline_done" />


    </FrameLayout>

    <EditText
        android:id="@+id/edTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_view_top_margin"
        android:background="@null"
        android:hint="@string/title"
        android:minHeight="@dimen/min_height"
        style="@style/TitleTextStyling"/>

    <EditText
        android:id="@+id/edContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_marginTop="@dimen/text_view_top_margin"
        android:hint="@string/enter_description"
        android:minHeight="@dimen/min_height"
        style="@style/ContentTextStyling" />

</LinearLayout>