<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/semi_black"
    android:orientation="vertical"
    android:padding="@dimen/screen_margin"
    tools:context="com.example.feature_note.presentation.note_detail.NoteDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btnGoBack"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/background_rounded_gray_secondary"
                android:contentDescription="@string/go_back"
                android:padding="@dimen/icon_padding"
                android:src="@drawable/ic_baseline_arrow_back" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btnDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/icon_end_margin"
                    android:background="@drawable/background_rounded_gray_secondary"
                    android:contentDescription="@string/delete_note"
                    android:padding="@dimen/icon_padding"
                    android:src="@drawable/ic_delete" />

                <ImageView
                    android:id="@+id/btnEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_rounded_gray_secondary"
                    android:contentDescription="@string/edit_note"
                    android:padding="@dimen/icon_padding"
                    android:src="@drawable/ic_edit" />

            </LinearLayout>


        </FrameLayout>

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TitleTextStyling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_top_margin"
            android:minHeight="@dimen/min_height"
            tools:text="Title" />

        <TextView
            android:id="@+id/tvContent"
            style="@style/ContentTextStyling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_top_margin"
            android:minHeight="@dimen/min_height"
            tools:text="Content" />

    </LinearLayout>

</LinearLayout>